chore: update notebook to match new Pipeline

--- a/example/pipeline/Experimentalist Pipeline Examples.ipynb
+++ b/example/pipeline/Experimentalist Pipeline Examples.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "from functools import partial\n",
     "from autora.variable import DV, IV, ValueType, VariableCollection\n",
-    "from autora.experimentalist.pipeline import make_pipeline\n",
+    "from autora.experimentalist.pipeline import Pipeline\n",
     "from autora.experimentalist.pool import grid_pool\n",
     "from autora.experimentalist.filter import weber_filter\n",
     "from autora.experimentalist.sampler import random_sampler"
@@ -40,7 +40,7 @@
    "source": [
     "## Implementation\n",
     "\n",
-    "The `PoolPipeline` class consists of two types of inputs:\n",
+    "The `Pipeline` class consists of two types of :\n",
     "1. Pool - A pool of conditions or a function to generate it.\n",
     "2. Pipes - An arbitrary number of filter functions to apply to the pool.\n",
     "   * Examples of pipes may be samplers, conditional filters, and sequencers.\n",
@@ -145,18 +145,16 @@
     "sampler = partial(random_sampler, n=10)\n",
     "\n",
     "# Initialize the pipeline\n",
-    "pipeline_random_samp = make_pipeline([\n",
-    "    pooler_callable,\n",
-    "    weber_filter, # Filter that selects conditions with IV1 <= IV2\n",
-    "    sampler\n",
-    "],\n",
-    ")"
+    "pipeline_random_samp = Pipeline([\n",
+    "    (\"pool\", pooler_callable),\n",
+    "    (\"filter\", weber_filter), # Filter that selects conditions with IV1 <= IV2\n",
+    "    (\"sampler\", sampler)\n",
+    "]\n",
+    ")\n",
+    "pipeline_random_samp"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -195,13 +193,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "An alternative method of passing an instantiated pool iterator is demonstrated below. Note the difference where `gridsearch_pool` is not initialized using the `partial` function but instantiated before initializing the `PoolPipeline`. `gridsearch_pool` returns an iterator of the exhaustive pool. This will result in unexpected behavior when the pipeline is run multiple times."
+    "An alternative method of passing an instantiated pool iterator is demonstrated below. Note the difference where `grid_pool` is not initialized using the `partial` function but instantiated before initializing the `Pipeline`. `grid_pool` returns an iterator of the exhaustive pool. This will result in unexpected behavior when the Pipeline is run multiple times."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -214,11 +209,11 @@
     "pooler_iterator = grid_pool(metadata.independent_variables)\n",
     "\n",
     "# Initialize the pipeline\n",
-    "pipeline_random_samp2 = make_pipeline(\n",
+    "pipeline_random_samp2 = Pipeline(\n",
     "    [\n",
-    "        pooler_iterator,\n",
-    "        weber_filter, # Filter that selects conditions with IV1 <= IV2\n",
-    "        sampler # Sampler defined in the first implementation example\n",
+    "        (\"pool (iterator)\", pooler_iterator),\n",
+    "        (\"filter\",weber_filter), # Filter that selects conditions with IV1 <= IV2\n",
+    "        (\"sampler\", sampler) # Sampler defined in the first implementation example\n",
     "    ]\n",
     ")\n",
     "# Run the Pipeline\n",
@@ -226,13 +221,10 @@
     "results2 = pipeline_random_samp2.run()\n",
     "print('Sampled Conditions:')\n",
     "print(f' Run 1: {results1}\\n',\n",
-    "      f'Run 2: {results2}')\n"
+    "      f'Run 2: {results2}')"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
