docs: update notebook
Co-Authored-By: George Dang <53052793+gtdang@users.noreply.github.com>

--- a/example/pipeline/Experimentalist Pipeline Examples.ipynb
+++ b/example/pipeline/Experimentalist Pipeline Examples.ipynb
@@ -40,19 +40,12 @@
    "source": [
     "## Implementation\n",
     "\n",
-    "The `Pipeline` class consists of two types of :\n",
-    "1. Pool - A pool of conditions or a function to generate it.\n",
-    "2. Pipes - An arbitrary number of filter functions to apply to the pool.\n",
-    "   * Examples of pipes may be samplers, conditional filters, and sequencers.\n",
-    "\n",
-    "```Python\n",
-    "# Initialize the Pipeline\n",
-    "from autora.experimentalist.pipeline import make_pipeline\n",
-    "pipeline = make_pipeline([Pool, *Pipe])\n",
-    "\n",
-    "# Run the pipeline\n",
-    "conditions = pipeline.run()\n",
-    "```"
+    "The `Pipeline` class consists of a series of steps:\n",
+    "1. One or no \"pool\" steps which generate experimental conditions,\n",
+    "2. An arbitrary number of steps to apply to the pool. Examples of steps may be:\n",
+    "    - samplers\n",
+    "    - conditional filters\n",
+    "    - sequencers"
    ],
    "metadata": {
     "collapsed": false
