docs: update notebook on pipeline
Co-Authored-By: George Dang <53052793+gtdang@users.noreply.github.com>

--- a/example/pipeline/Experimentalist Pipeline Examples.ipynb
+++ b/example/pipeline/Experimentalist Pipeline Examples.ipynb
@@ -111,8 +111,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Next we set up the `PoolPipeline` with three functions:\n",
-    "1. `gridsearch_pool` - Generates an exhaustive pool of condition combinations using the Cartesian product of discrete IV values.\n",
+    "Next we set up the `Pipeline` with three functions:\n",
+    "1. `grid_pool` - Generates an exhaustive pool of condition combinations using the Cartesian product of discrete IV values.\n",
     "   - The discrete IV values are specified with the `allowed_values` attribute when defining the IVs.\n",
     "2. `weber_filer` - Filter that selects the experimental design constraint where IV1 <= IV2.\n",
     "3. `random_sampler` - Samples the pool of conditions\n",
@@ -120,10 +120,7 @@
     "Functions that require keyword inputs are initialized using the `partial` function before passing into `PoolPipeline`."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -132,17 +129,15 @@
    "outputs": [],
    "source": [
     "## Set up pipeline functions with the partial function\n",
-    "# Pool Function\n",
-    "pooler_callable = partial(grid_pool, ivs=metadata.independent_variables)\n",
     "# Random Sampler\n",
-    "sampler = partial(random_sampler, n=10)\n",
     "\n",
     "# Initialize the pipeline\n",
     "pipeline_random_samp = Pipeline([\n",
-    "    (\"pool\", pooler_callable),\n",
-    "    (\"filter\", weber_filter), # Filter that selects conditions with IV1 <= IV2\n",
-    "    (\"sampler\", sampler)\n",
-    "]\n",
+    "    (\"grid_pool\", grid_pool),\n",
+    "    (\"weber_filer\", weber_filter), # Filter that selects conditions with IV1 <= IV2\n",
+    "    (\"random_sampler\", random_sampler)\n",
+    "],\n",
+    "    {\"grid_pool\": {\"ivs\": metadata.independent_variables}, \"random_sampler\": {\"n\": 10}}\n",
     ")\n",
     "pipeline_random_samp"
    ],
@@ -206,8 +201,9 @@
     "    [\n",
     "        (\"pool (iterator)\", pooler_iterator),\n",
     "        (\"filter\",weber_filter), # Filter that selects conditions with IV1 <= IV2\n",
-    "        (\"sampler\", sampler) # Sampler defined in the first implementation example\n",
-    "    ]\n",
+    "        (\"sampler\", random_sampler) # Sampler defined in the first implementation example\n",
+    "    ],\n",
+    "    {\"sampler\": {\"n\": 10}}\n",
     ")\n",
     "# Run the Pipeline\n",
     "results1 = pipeline_random_samp2.run()\n",
@@ -224,18 +220,6 @@
    "cell_type": "markdown",
    "source": [
     "Running the pipeline multiple times results in an empty list. This is because the iterator is exhausted after first run and no longer yields results. If the pipeline needs to be run multiple times, initializing the functions as a callable using the `partial` function is recommended because the iterator will be initialized at the start of each run.\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Writing custom functions\n"
    ],
    "metadata": {
     "collapsed": false,
