add double underscore syntax to Pipeline Notebook
Co-Authored-By: George Dang <53052793+gtdang@users.noreply.github.com>

--- a/example/pipeline/Experimentalist Pipeline Examples.ipynb
+++ b/example/pipeline/Experimentalist Pipeline Examples.ipynb
@@ -219,13 +219,37 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Running the pipeline multiple times results in an empty list. This is because the iterator is exhausted after first run and no longer yields results. If the pipeline needs to be run multiple times, initializing the functions as a callable using the `partial` function is recommended because the iterator will be initialized at the start of each run.\n"
+    "Running the pipeline multiple times results in an empty list. This is because the iterator is exhausted after first run and no longer yields results. If the pipeline needs to be run multiple times, initializing the functions as a callable using the `partial` function is recommended because the iterator will be initialized at the start of each run."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "You could also use the scikit-learn \"__\" syntax to pass parameter sets into the pipeline:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "pipeline_random_samp = Pipeline([\n",
+    "    (\"grid_pool\", grid_pool),\n",
+    "    (\"weber_filer\", weber_filter), # Filter that selects conditions with IV1 <= IV2\n",
+    "    (\"random_sampler\", random_sampler)\n",
+    "],\n",
+    "    {\"grid_pool__ivs\": metadata.independent_variables, \"random_sampler__n\": 10}\n",
+    ")\n",
+    "pipeline_random_samp\n"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
