docs: Edited notebook examples for adjusting plot configurations.

--- a/example/cycle/cycle_results_plots.ipynb
+++ b/example/cycle/cycle_results_plots.ipynb
@@ -103,7 +103,7 @@
     "The plotter will create a panel for each cycle.\n",
     "* Default shows black points for previous data and orange points for new data to the cycle.\n",
     "* The theory is plotted as a blue line.\n",
-    "* Default panel configuration is 4 plots to a line."
+    "* Default panel configuration is 4 plots to a row."
    ],
    "metadata": {
     "collapsed": false,
@@ -130,7 +130,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Default parameters can be changed by passing in keywords\n"
+    "### Default parameters can be changed by passing in keywords"
    ],
    "metadata": {
     "collapsed": false,
@@ -161,9 +161,10 @@
    "cell_type": "markdown",
    "source": [
     "Above the wrap is changed to 3 panels and the dimensions of the figure are adjusted.\n",
+    "\n",
     "* Keyword arguments can be supplied to the underlying matplotlib plotting functions as dictionaries.\n",
-    "    * This example supplies figure dimensions to the [subplot function](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.subplot.html) that creates the through the keyword `subplot_kw`.\n",
-    "    * Below shows ways to specify the parameters of the scatter points and theory line."
+    "   * This example supplies figure dimensions to the [subplot](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.subplot.html) function that creates the through the keyword subplot_kw.\n",
+    "   * Below shows ways to specify the parameters of the [scatter](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.scatter.html) points and theory [line](https://matplotlib.org/stable/api/_as_gen/matplotlib.axes.Axes.plot.html)."
    ],
    "metadata": {
     "collapsed": false,
