docs: Fixed typos in notebook markdown.

--- a/example/cycle/cycle_results_plots.ipynb
+++ b/example/cycle/cycle_results_plots.ipynb
@@ -160,10 +160,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Above the wrap is changed to 3 panels and the dimensions of the figure are adjusted.\n",
+    "Above the wrap is changed to 3 panels per row and the dimensions of the figure are adjusted.\n",
     "\n",
     "* Keyword arguments can be supplied to the underlying matplotlib plotting functions as dictionaries.\n",
-    "   * This example supplies figure dimensions to the [subplot](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.subplot.html) function that creates the through the keyword subplot_kw.\n",
+    "   * The above example supplies figure dimensions to the [subplot](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.subplot.html) using the keyword `subplot_kw`. The subplot function controls the layout and configuration of the entire figure of panels.\n",
     "   * Below shows ways to specify the parameters of the [scatter](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.scatter.html) points and theory [line](https://matplotlib.org/stable/api/_as_gen/matplotlib.axes.Axes.plot.html)."
    ],
    "metadata": {
