refactor: update path to DefaultCycle

--- a/example/cycle/simple_cycle_bms_darts.ipynb
+++ b/example/cycle/simple_cycle_bms_darts.ipynb
@@ -17,7 +17,7 @@
    "outputs": [],
    "source": [
     "from autora.variable import VariableCollection, Variable\n",
-    "from autora.cycle import Cycle\n",
+    "from autora.cycle import DefaultCycle as Cycle\n",
     "import matplotlib.pyplot as plt\n",
     "from itertools import repeat, chain"
    ],
