revert: rename of Cycle

--- a/example/cycle/simple_cycle_uncertainty_experimentalist.ipynb
+++ b/example/cycle/simple_cycle_uncertainty_experimentalist.ipynb
@@ -20,7 +20,7 @@
     "import numpy as np\n",
     "from sklearn.dummy import DummyRegressor\n",
     "\n",
-    "from autora.cycle import DefaultCycle as Cycle\n",
+    "from autora.cycle import Cycle\n",
     "from autora.experimentalist.sampler import random_sampler, poppernet_pooler, nearest_values_sampler\n",
     "from autora.experimentalist.pipeline import make_pipeline\n",
     "from autora.variable import VariableCollection, Variable"
