docs: quick fix on example file, showing how a first cycle can be seeded

--- a/example/cycle/simple_cycle_uncertainty_experimentalist.ipynb
+++ b/example/cycle/simple_cycle_uncertainty_experimentalist.ipynb
@@ -276,14 +276,17 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "# Experimentalist\n",
     "x_seed = np.linspace(-10, 10, 20)\n",
-    "y_seed = example_synthetic_experiment_runner(x_seed)\n",
     "\n",
+    "# Experiment runner\n",
+    "y_seed = example_synthetic_experiment_runner(x_seed)\n",
+    "poppernet_experimentalist_cycle.data.observations.append(np.column_stack([x_seed, y_seed]))\n",
+    "\n",
+    "# Theorist\n",
     "theory_seed = DummyRegressor(strategy=\"constant\", constant=y_seed[1])\n",
     "theory_seed.fit(x_seed, y_seed)\n",
-    "\n",
-    "poppernet_experimentalist_cycle.data.theories.append(theory_seed)\n",
-    "poppernet_experimentalist_cycle.data.observations.append(np.column_stack([x_seed, y_seed]))"
+    "poppernet_experimentalist_cycle.data.theories.append(theory_seed)"
    ],
    "metadata": {
     "collapsed": false
